--- a/src/template.html
+++ b/src/template.html
@@ -15,24 +15,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
-    <style>
-      /* Custom styles */
-      body {
-        padding-top: 70px; /* height of navbar */
-      }
-      .root {
-        padding-top: 32px;
-      }
-      .navbar {
-        background-color: #006494;
-      }
-      .navbar-brand {
-        font-size: 22;
-      }
-      html {
-        font-family: "Inter", sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
