--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -1,92 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Basico -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Responsive -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Opções do site-->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
-    <title>Cadastro</title>
+<head>
+  <!-- Basico -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Opções do site-->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <title>Cadastro</title>
 
-    <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
-  </head>
+  <!-- bootstrap css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <body>
-    <div class="header">
-      <a href="index.html" class="logo">VACINOW</a>
-    </div>
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700&display=swap" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
 
-    <section class="contact_section layout_padding-top">
-      <div class="container-fluid">
-        <div class="form_container">
-          <div class="heading_container">
-            <img src="images/heading-img.png" alt="" />
-            <h2 class="tittle">Não perca tempo e faça seu cadastro:</h2>
-            <br />
-          </div>
-          <form action="">
-            <div>
-              <input type="text" placeholder="Nome Completo" />
-            </div>
-            <div>
-              <input type="cpf" placeholder="CPF" />
-            </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <input type="password" placeholder="Senha" />
-            </div>
-            <div class="d-flex">
-              <button type="submit">
-                <a href="dashboard.html">Cadastro</a>
-              </button>
-            </div>
-          </form>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
+  <script type="text/javascript" src="js/identity.js"></script>
+</head>
+
+<body>
+  <div class="header">
+    <a href="index.html" class="logo">VACINOW</a>
+  </div>
+
+  <section class="contact_section layout_padding-top">
+    <div class="container-fluid">
+      <div class="form_container">
+        <div class="heading_container">
+          <img src="images/heading-img.png" alt="" />
+          <h2 class="tittle">Não perca tempo e faça seu cadastro:</h2>
+          <br />
         </div>
+        <form onsubmit="register(event)">
+          <div>
+            <input type="text" name="name" placeholder="Nome Completo" />
+          </div>
+          <div>
+            <input type="text" name="cpf" placeholder="CPF" />
+          </div>
+          <div>
+            <input type="text" name="sex" placeholder="SEXO" />
+          </div>
+          <div>
+            <input type="email" name="email" placeholder="Email" />
+          </div>
+          <div>
+            <input type="password" name="password" placeholder="Senha" />
+          </div>
+          <div class="d-flex">
+            <button type="submit">Cadastro</button>
+          </div>
+        </form>
       </div>
+    </div>
+  </section>
+
+  <!-- Rodapé -->
+  <footer>
+    <section class="container-fluid footer_section">
+      <p>
+        &copy; 2023 Todo os direitos reservados. Design feito por: Equipe
+        VACINOW.
+      </p>
     </section>
+  </footer>
 
-    <!-- Rodapé -->
-    <footer>
-      <section class="container-fluid footer_section">
-        <p>
-          &copy; 2023 Todo os direitos reservados. Design feito por: Equipe
-          VACINOW.
-        </p>
-      </section>
-    </footer>
+  <!-- fim do rodapé-->
 
-    <!-- fim do rodapé-->
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script>
+    function openNav() {
+      document.getElementById("myNav").classList.toggle("menu_width");
+      document
+        .querySelector(".custom_menu-btn")
+        .classList.toggle("menu_btn-style");
+    }
+  </script>
+</body>
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script>
-      function openNav() {
-        document.getElementById("myNav").classList.toggle("menu_width");
-        document
-          .querySelector(".custom_menu-btn")
-          .classList.toggle("menu_btn-style");
-      }
-    </script>
-  </body>
 </html>
