--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -1,126 +1,139 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Basico -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Responsive -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Opções do site-->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
-    <title>Cadastrados</title>
+<head>
+  <!-- Basico -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Opções do site-->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
 
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <title>Cadastrados</title>
 
-    <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
-  </head>
+  <!-- bootstrap css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <body>
-    <div class="header">
-      <a href="pag_inic.html" class="logo">VACINOW</a>
-      <div class="header-right">
-        <a class="active" href="pag_inic.html">Home</a>
-        <a href="login.html">João Teixeira</a>
-      </div>
+  <!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins:400,700&display=swap" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
+  <script type="text/javascript" src="js/dashboard.js"></script>
+  <script type="text/javascript" src="js/identity.js"></script>
+</head>
+
+<body onload="loadUserData()">
+  <div class="header">
+    <a href="dashboard.html" class="logo">VACINOW</a>
+    <div class="header-right">
+      <a id="user-name" href="#">User Name</a>
+      <a href="#" onclick="logout()">Sair</a>
     </div>
-    <br />
+  </div>
+  <br />
 
-    <div class="container">
-      <table class="bordered striped centered highlight responsive-table">
-        <thead>
-          <tr>
-            <th class="coluna">CPF/CNPJ</th>
-            <th class="coluna">NOME COMPLETO</th>
-            <th class="coluna">SEXO</th>
-            <th class="coluna">GRAU DE PARENTESCO</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>942.145.456-13</td>
-            <td>João Teixeira (titular da conta)</td>
-            <td>Masculino</td>
-            <td>Filho</td>
-          </tr>
-          <tr>
-            <td>308.579.726-26</td>
-            <td>Fabiano Azevedo</td>
-            <td>Masculino</td>
-            <td>Pai</td>
-          </tr>
-          <tr>
-            <td>653.662.666-45</td>
-            <td>Gabriela Teixeira</td>
-            <td>Feminino</td>
-            <td>Mãe</td>
-          </tr>
-          <tr>
-            <td>049.750.616-51</td>
-            <td>Raíssa Azevedo</td>
-            <td>Feminino</td>
-            <td>Irmã</td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="container">
+    <div class="heading_container">
+      <h2>Familiares</h2>
+      <br />
     </div>
+    <table class="bordered striped centered highlight responsive-table">
+      <thead>
+        <tr>
+          <th class="coluna">CPF</th>
+          <th class="coluna">NOME COMPLETO</th>
+          <th class="coluna">SEXO</th>
+          <th class="coluna">GRAU DE PARENTESCO</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+      </tbody>
+    </table>
+  </div>
 
-    <section class="contact_section layout_padding-top">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <div class="form_container">
-              <div class="heading_container">
-                <h2>Tem mais algum familiar para adicionar?</h2>
-                <br />
-              </div>
-              <div class="d-flex">
-                <button>
-                  <a href="/adicionar.html">ADICIONAR</a>
-                </button>
-              </div>
+  <section class="contact_section layout_padding-top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-5 offset-md-1">
+          <div class="form_container">
+            <div class="heading_container">
+              <h2>Tem mais algum familiar para adicionar?</h2>
+              <br />
+            </div>
+            <div class="d-flex">
+              <button>
+                <a href="./adicionar.html">ADICIONAR</a>
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Rodapé-->
+  <br />
+  <br />
+  <div class="container">
+    <div class="heading_container">
+      <h2>Solicitações de Vacinas</h2>
+      <br />
+    </div>
+    <table class="bordered striped centered highlight responsive-table">
+      <thead>
+        <tr>
+          <th class="coluna">PACIENTE</th>
+          <th class="coluna">VACINA</th>
+          <th class="coluna">ONDE</th>
+          <th class="coluna">QUANDO</th>
+          <th class="coluna">STATUS</th>
+        </tr>
+      </thead>
+      <tbody id="vacinasTableBody">
+      </tbody>
+    </table>
+  </div>
 
-    <footer>
-      <section class="container-fluid footer_section">
-        <p>
-          &copy; 2023 Todo os direitos reservados. Design feito por: Equipe
-          VACINOW.
-        </p>
-      </section>
-    </footer>
+  <section class="contact_section layout_padding-top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-5 offset-md-1">
+          <div class="form_container">
+            <div class="heading_container">
+              <h2>Nova solicitação?</h2>
+              <br />
+            </div>
+            <div class="d-flex">
+              <button>
+                <a href="./nova-vacina.html">NOVA VACINA</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- fim do rodapé-->
+  <br />
+  <br />
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script>
-      function openNav() {
-        document.getElementById("myNav").classList.toggle("menu_width");
-        document
-          .querySelector(".custom_menu-btn")
-          .classList.toggle("menu_btn-style");
-      }
-    </script>
-  </body>
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script>
+    function openNav() {
+      document.getElementById("myNav").classList.toggle("menu_width");
+      document
+        .querySelector(".custom_menu-btn")
+        .classList.toggle("menu_btn-style");
+    }
+  </script>
+
+</body>
+
 </html>
